# python-aioddd

./: .gitignore  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml  pyscript.sh  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml  pipeline.yml
aioddd/: __init__.py  aggregates.py  container.py  cqrs.py  errors.py  events.py  helpers.py  testing.py  utils.py  value_objects.py
aioddd/subprocess/: __init__.py
docs/: 404.html  index.html  sitemap.xml
docs/en/: index.html
docs/es/: index.html
docs/search/: search_index.json
docs_src/: mkdocs.yml
docs_src/config/en/: mkdocs.yml
docs_src/config/es/: mkdocs.yml
docs_src/docs/en/: index.md
docs_src/docs/es/: index.md
petifun_container/: __main__.py
petifun_container/libs/owner/application/: services.py
petifun_container/libs/owner/domain/: repositories.py
petifun_container/libs/owner/infrastructure/: mongodb_repositories.py
petifun_container/libs/shared/infrastructure/: mongodb_connection.py
petifun_container/libs/user/application/: services.py
petifun_container/libs/user/domain/: repositories.py
petifun_container/libs/user/infrastructure/: mongodb_repositories.py
tests/: conftest.py
tests/unit/aioddd/: test_aggregates.py  test_container.py  test_cqrs.py  test_errors.py  test_events.py  test_value_objects.py
